fix padding overflow

--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--bg-color);
   box-sizing: border-box;
   display: grid;
-  grid-template-rows: 20% 80%;
-  grid-template-columns: 20% 80%;
+  grid-template-rows: 1fr 4fr;
+  grid-template-columns: 1fr 4fr;
   grid-template-areas: 
       "sidebar       header"
       "sidebar main-content";
@@ -154,12 +154,12 @@ body {
 .dashboard-header {
   grid-area: header;
   display: grid;
-  height: 100%;
-  grid-template-rows: 30% 70%;
-  grid-template-columns: 60% 40%;
-  row-gap: 0.8em;
+  max-height: 100%;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 3fr 1fr;
+  row-gap: 0.3em;
   background-color: white;
-  padding: calc(1vw + 0.2em) calc(1vw + 1.5em);
+  padding: 0 calc(1vw + 1.5em) calc(1vw + 0.2em) calc(1vw + 1.5em);
   box-shadow: 1px 2px 5px #3d3d3d;
 }
 
@@ -170,7 +170,7 @@ body {
 }
 .dashboard-header .search input {
   width: 85%;
-  padding: 0.3em 1em;
+  padding: 0.2em 1em;
   background-color: var(--bg-color);
   border-radius: 25px;
   border: none;
@@ -185,8 +185,8 @@ body {
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  height: 50%;
-  width: 2.5em;
+  height: 1.5em;
+  width: 1.5em;
 }
 
 .dashboard-header .profile {
